--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
 		"target": "ESNext",
 		"module": "Preserve",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
 		"allowJs": true,
 
 		// Bundler mode
@@ -21,16 +20,9 @@
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
 
-		// Some stricter flags (disabled by default)
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false,
-
-		// Paths
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["./src/*"]
-		}
+		// Types
+		"types": ["bun-types"]
 	},
-	"include": ["src", "examples"]
+	"include": ["src", "examples"],
+	"exclude": ["node_modules"]
 }
