updated package exports

--- a/package.json
+++ b/package.json
@@ -5,8 +5,20 @@
 	"author": "zendrex",
 	"license": "MIT",
 	"type": "module",
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		".": "./src/index.ts"
+		".": {
+			"import": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"require": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.cjs"
+			}
+		}
 	},
 	"scripts": {
 		"build": "bun run scripts/build.ts",
