--- a/package.json
+++ b/package.json
@@ -17,31 +17,49 @@
 			"require": {
 				"types": "./dist/index.d.ts",
 				"default": "./dist/index.cjs"
-			}
+			},
+			"default": "./src/index.ts"
 		}
 	},
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE"
+	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
-		"build": "bun run scripts/build.ts",
-		"check": "bunx --bun biome check",
-		"fix": "bunx --bun biome lint --write && bunx --bun biome format --write",
-		"prepare": "husky"
+		"build": "tsup",
+		"check": "bunx ultracite check",
+		"fix": "bunx ultracite fix",
+		"check-types": "tsc -b",
+		"changeset": "changeset",
+		"version": "changeset version",
+		"prepare": "husky",
+		"clean": "git clean -xdf dist node_modules"
 	},
 	"dependencies": {
 		"chalk": "^5.6.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.10",
+		"@biomejs/biome": "2.4.1",
+		"@changesets/changelog-github": "^0.5.2",
+		"@changesets/cli": "^2.29.8",
+		"@swc/core": "^1.15.11",
 		"@types/bun": "latest",
-		"bun-plugin-dts": "^0.3.0",
+		"bun-types": "latest",
 		"husky": "^9.1.7",
-		"lint-staged": "^16.2.7"
+		"lint-staged": "^16.2.7",
+		"tsup": "^8.5.1",
+		"ultracite": "^7.2.3"
 	},
 	"peerDependencies": {
 		"typescript": "^5.9.3"
 	},
 	"lint-staged": {
 		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
-			"bun run fix"
+			"bunx ultracite fix"
 		]
 	},
 	"repository": {
